--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </ul>
       </nav>
 
-      <a class="nav-cta" href="https://calendar.google.com/" target="_blank" rel="noopener noreferrer">Prendre rendez-vous</a>
+      <a class="nav-cta" href="https://calendar.app.google/JnrpmeKt7nm8DHDi6" target="_blank" rel="noopener noreferrer">Prendre rendez-vous</a>
     </div>
   </header>
 
@@ -99,7 +99,7 @@
         </div>
         <div class="actions-card reveal">
           <div class="hero-actions">
-            <a class="btn" href="https://calendar.google.com/" target="_blank" rel="noopener noreferrer">
+            <a class="btn" href="https://calendar.app.google/JnrpmeKt7nm8DHDi6" target="_blank" rel="noopener noreferrer">
               <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 2h2v2h6V2h2v2h3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h3V2zm13 8H4v10h16V10z"></path></svg>
               Prendre un rendez-vous en ligne
             </a>
@@ -363,7 +363,7 @@
         </div>
         <div class="actions-card reveal">
           <div class="hero-actions">
-            <a class="btn" href="https://calendar.google.com/" target="_blank" rel="noopener noreferrer">
+            <a class="btn" href="https://calendar.app.google/JnrpmeKt7nm8DHDi6" target="_blank" rel="noopener noreferrer">
               <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 2h2v2h6V2h2v2h3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h3V2zm13 8H4v10h16V10z"></path></svg>
               Prendre un rendez-vous en ligne
             </a>
