Update hero photo sizing and gallery images/captions

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               </div>
             </div>
             <div class="hero-cabinet-photo">
-              <img src="assets/images/photo-cabinet.JPG" alt="Photo du cabinet de neurologie" loading="lazy" />
+              <img src="assets/images/Carte-cabinet.JPG" alt="Photo du cabinet de neurologie" loading="lazy" />
             </div>
           </div>
         </div>
@@ -122,16 +122,24 @@
         <div class="carousel reveal" data-carousel tabindex="0" aria-label="Carrousel de photos du cabinet">
           <div class="carousel-track">
             <article class="carousel-slide">
-              <img src="assets/images/photo-cabinet.JPG" alt="Accueil du cabinet de neurologie" loading="lazy" />
+              <img src="assets/images/1.jpg" alt="Cabinet de neurologie - photo 1" loading="lazy" />
               <div class="carousel-caption">Accueil du cabinet</div>
             </article>
             <article class="carousel-slide">
-              <img src="assets/images/photo-cabinet.JPG" alt="Salle de consultation du cabinet" loading="lazy" />
+              <img src="assets/images/2.jpg" alt="Cabinet de neurologie - photo 2" loading="lazy" />
+              <div class="carousel-caption">Salle d'attente</div>
+            </article>
+            <article class="carousel-slide">
+              <img src="assets/images/3.jpg" alt="Cabinet de neurologie - photo 3" loading="lazy" />
               <div class="carousel-caption">Salle de consultation</div>
             </article>
             <article class="carousel-slide">
-              <img src="assets/images/photo-cabinet.JPG" alt="Espace d'explorations neurologiques" loading="lazy" />
-              <div class="carousel-caption">Espace d'explorations</div>
+              <img src="assets/images/4.jpg" alt="Cabinet de neurologie - photo 4" loading="lazy" />
+              <div class="carousel-caption">Salle d'EEG</div>
+            </article>
+            <article class="carousel-slide">
+              <img src="assets/images/5.jpg" alt="Cabinet de neurologie - photo 5" loading="lazy" />
+              <div class="carousel-caption">Salle d'ENMG</div>
             </article>
           </div>
         </div>
@@ -164,8 +172,7 @@
         <h2 class="section-title">À propos du Dr ENNIGRO Soukaina</h2>
         <div class="about-layout">
           <div class="about-photo reveal" role="img" aria-label="Photo de la neurologue, emplacement à remplacer">
-            Photo de la neurologue<br />
-            (placeholder)
+            <img src="assets/images/photo-cabinet.JPG" alt="Photo du Dr ENNIGRO Soukaina, neurologue à Casablanca" loading="lazy" />
           </div>
           <article class="card reveal">
             <h3>Un parcours médical d'excellence</h3>
